[package]
name = "ølscript"
version = "0.1.0"
authors = ["nilq <i.am.niels.nielsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "*"
rocket = "0.4.2"
rocket_cors = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
